--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -480,6 +480,7 @@
     <string name="update_protocols">Update Protocols</string>
     <string name="end_all_visit">End All Visit</string>
     <string name="filter_by_creator">Filter by creator</string>
+    <string name="filter_by_age">Filter by age</string>
     <string name="planet_name">Planet Name</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
