--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -441,7 +441,7 @@
     <string name="privacy_toast">Please select an option</string>
     <string name="temperature_f">Temperature (F)</string>
     <string name="sync_now">Refresh Now</string>
-    <string name="lastsync">lastsync</string>
+    <string name="lastsync">Last Sync</string>
     <string name="enter_password">Enter your password</string>
     <string name="enter_username">Enter your username</string>
     <string name="patient_denies">Patient denies</string>
