Sync new code added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -651,5 +651,8 @@
     <string name="visit_closed">Visit Closed</string>
     <string name="gender_male">Male</string>
     <string name="gender_female">Female</string>
+    <!--@lincon-->
+    <string name="failed_initial_synced">Failed refresh, check your internet connection. Please restart the app.</string>
+
 
 </resources>
