--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -691,4 +691,5 @@
     <string name="additional_doc_image_picker_title">Add Additional Document!</string>
     <string name="try_again_later">Something went wrong. Please try again later.</string>
     <string name="sikkim">Sikkim</string>
+    <string name="no_patient_found">No patient found!</string>
 </resources>
