--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -687,5 +687,5 @@
     <string name="additional_doc_image_picker_title">अतिरिक्त दस्तावेज़ जोड़ें!</string>
     <string name="sikkim">Sikkim</string>
     <string name="no_patient_found">No patient found!</string>
-
+    <string name="high_risk_patients">उच्च जोखिम वाले मरीज़</string>
 </resources>
