--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -692,4 +692,5 @@
     <string name="try_again_later">Something went wrong. Please try again later.</string>
     <string name="sikkim">Sikkim</string>
     <string name="no_patient_found">No patient found!</string>
+    <string name="high_risk_patients">High Risk Patients</string>
 </resources>
