--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -653,6 +653,7 @@
     <string name="setup_internet_available">A strong Internet connection is required for setup.</string>
     <string name="setup_internet_not_available">You are not connected to the Internet.</string>
     <string name="generic_info">Info!</string>
+    <string name="loading_more">Loading more…</string>
 
 
 </resources>
