--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -742,5 +742,8 @@
         \n\n
         Telemedicine app allows Health Officers to collect detailed patient complaints and symptoms and generates a comprehensive clinical case history. The app also allows them to capture details of previous medications, diagnostics, prescriptions and treatment.
     </string>
-
+    <string name="total_calls">Total Calls: </string>
+    <string name="Daily_Performance_Activity_Title">Daily Performance Report</string>
+    <string name="call_to">"Call To: "</string>
+    <string name="status">"Status: "</string>
 </resources>
