--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -709,4 +709,5 @@
     <string name="start_newvisit_confirmation_msg">Are you sure you want to start a visit?</string>
     <string name="prescription_notprovided_msg">Doctor has not given prescription. Please wait for prescription to end the visit.</string>
 
+    <string name="location_setup">Setup Location - </string>
 </resources>
