--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -715,4 +715,9 @@
 
     <string name="hw_qualification_hint">योग्यता</string>
     <string name="hw_aboutme_hint">मेरे बारे में</string>
+
+    <string name="hw_number_validation_error">कृपया वैध मोबाइल नंबर दर्ज करें</string>
+    <string name="hw_gender_validation_error">कृपया वैध लिंग दर्ज करें</string>
+    <string name="hw_whatsappnumber_validation_error">कृपया वैध व्हाट्सएप नंबर दर्ज करें</string>
+    <string name="hw_email_validation_error">कृपया वैध ईमेल दर्ज करें</string>
 </resources>
