--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -855,7 +855,7 @@
     <string name="still_birth">Still Birth</string>
     <string name="action_birthoutcome">Birth Outcome</string>
     <string name="endedStage1Button">First Stage Ended</string>
-    <string name="unique_Ezazi_registration_number">UER No</string>
+    <string name="row_patient_URN">Patient URN</string>
 
 
 </resources>
